--- a/corazon.html
+++ b/corazon.html
@@ -114,7 +114,7 @@ heart.addEventListener('click', () => {
     img.className = 'floating-img';
 
     // 🔹 Ruta de la imagen (puede ser PNG, SVG o GIF)
-    img.src = 'manu.png'; // cambia esto según tu ruta
+    img.src = 'https://github.com/LeoDS9/ame/blob/main/manu.png'; // cambia esto según tu ruta
 
     // 🔹 Tamaño aleatorio
     const size = 20 + Math.floor(Math.random() * 25);
